# ZooERP

./: CMakeLists.txt  README.md  coverage.sh
.cache/clangd/index/: Animals.cpp.921CD14B56F06E65.idx  Animals.h.695BB4F3342DC652.idx  Interfaces.h.4644696B5255E7FB.idx  Things.h.8C20E94E56616BC6.idx  VetClinic.h.F996D8235F9A03A4.idx  Zoo.cpp.9AE4F8BFDD881CE1.idx  Zoo.h.C85CDB310AD7484C.idx  main.cpp.AA6E0184EFE3E2C9.idx  zoo_test.cpp.F99BDFDC2B4030C5.idx
include/: Animals.h  Interfaces.h  Things.h  ValueObjects.h  VetClinic.h  Zoo.h
src/: Animals.cpp  MenuSystem.cpp  MenuSystem.h  Zoo.cpp  main.cpp
tests/: zoo_test.cpp
